--- a/components.yaml
+++ b/components.yaml
@@ -11,7 +11,7 @@ cmake:
   develop: develop
 
 ecbuild:
-  local: ./cmake/ecbuild
+  local: ./cmake/@ecbuild
   remote: ../ecbuild.git
   tag: geos/v1.0.0
 
