Modest progress on Cmake instrumentation.
  - Somewhat completed:
    - src/Components/cda
    - src/Components/misc/*
  - Major caveat - just put placeholders for F2PY

Also removed obsolete GNUmakefile.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ set (DOING_GEOS5 YES)
 set (ACG_FLAGS -v)
 set (FV_PRECISION R4R8)
 
-list (APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
+list (APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake@")
 include (esma)
 
 ecbuild_declare_project()
@@ -39,6 +39,6 @@ add_definitions(${MPI_Fortran_COMPILE_FLAGS})
 include_directories(${MPI_Fortran_INCLUDE_PATH})
 
 # Recursively build source tree
-add_subdirectory (env)
-add_subdirectory (src)
+esma_add_subdirectory (env)
+esma_add_subdirectory (src)
 
