--- a/components.yaml
+++ b/components.yaml
@@ -1,22 +1,22 @@
 env:
-  local: ./env
+  local: ./env@
   remote: ../ESMA_env.git
   tag: v2.0.2
   develop: master
 
 cmake:
-  local: ./cmake
+  local: ./cmake@
   remote: ../ESMA_cmake.git
-  tag: v2.1.2
+  tag: v3.0.0
   develop: develop
 
 ecbuild:
-  local: ./cmake/@ecbuild
+  local: ./cmake@/ecbuild@
   remote: ../ecbuild.git
   tag: geos/v1.0.0
 
 MAPL:
-  local: ./src/Shared/GMAO_Shared/MAPL
+  local: ./src/Shared/GMAO_Shared/MAPL@
   remote: ../MAPL.git
   tag: v2.0.2
   develop: develop
