More updates to CMake instrumentation.
Now produces an executable and does at least some installation.

--- a/src/Components/CMakeLists.txt
+++ b/src/Components/CMakeLists.txt
@@ -1,5 +1,9 @@
-add_subdirectory (cda)
-add_subdirectory (misc)
-add_subdirectory (missions)
-add_subdirectory (qfed)
-add_subdirectory (rtms)
+#add_subdirectory (cda)
+#add_subdirectory (misc)
+#add_subdirectory (missions)
+#add_subdirectory (qfed)
+
+esma_add_subdirectories (rtms/RTSI rtms/crtm rtms/sixsv misc/gritas)
+
+
+
