Partial attempt to demonstrate testing in cmake.
Unfortunately, there are numerous issues with the base code uncluding
a missing test driver (test_miobs.F90).

--- a/src/Components/CMakeLists.txt
+++ b/src/Components/CMakeLists.txt
@@ -5,5 +5,10 @@
 
 esma_add_subdirectories (rtms/RTSI rtms/crtm rtms/sixsv misc/gritas)
 
+# Partial debugging of below:
+#add_subdirectory (misc/scat)
+
+
+
 
 
