--- a/src/Shared/GMAO_Shared/Chem_Base/CMakeLists.txt
+++ b/src/Shared/GMAO_Shared/Chem_Base/CMakeLists.txt
@@ -17,15 +17,16 @@ target_compile_definitions (${this} PRIVATE GEOS5)
 
 ecbuild_add_executable(TARGET gogo.x SOURCES gogo.F90 LIBS ${this})
 
-include (UseF2Py)
-include_directories (${esma_include}/${this})
-add_f2py_module(MieObs_ SOURCES MieObs_py.F90 
-   DESTINATION lib/Python
-   LIBRARIES Chem_Base MAPL GMAO_mpeu ${NETCDF_LIBRARIES} ${ESMF_LIBRARY}
-   INCLUDEDIRS ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR}/lib ${BASEDIR}/lib ${include_${this}} ${INC_NETCDF}
-   USE_MPI
-   )
-add_dependencies(MieObs_ ${this})
+# This MiObs_py.F90  is nearly identical to the one in ./src/Componenst/misc/scat.
+#include (UseF2Py)
+#include_directories (${esma_include}/${this})
+#add_f2py_module(MieObs_ SOURCES MieObs_py.F90 
+#   DESTINATION lib/Python
+#   LIBRARIES Chem_Base MAPL GMAO_mpeu ${NETCDF_LIBRARIES} ${ESMF_LIBRARY}
+#   INCLUDEDIRS ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR}/lib ${BASEDIR}/lib ${include_${this}} ${INC_NETCDF}
+#   USE_MPI
+#   )
+#add_dependencies(MieObs_ ${this})
 
 
 foreach (exe Chem_Aod.x Chem_Aod3d.x ctl_crst.x Chem_BundleToG5rs.x reff_calculator.xx ext_calculator.xx)
