Wrapped macro for f2py.
Now each f2py interface is also associated with a CMake test.

--- a/src/Components/cda/clouds/CMakeLists.txt
+++ b/src/Components/cda/clouds/CMakeLists.txt
@@ -23,19 +23,19 @@ esma_add_library (${this}
 
 
 
-add_f2py_module (Aero_
+esma_add_f2py_module (Aero_
   SOURCES Aero_py.F90
   DESTINATION lib/Python/${this}
   INCLUDEDIRS ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR}/lib ${include_${this}}
   )
 
-add_f2py_module (ICA_
+esma_add_f2py_module (ICA_
   SOURCES ICA_py.F90
   DESTINATION lib/Python/${this}
   INCLUDEDIRS ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR}/lib ${include_${this}}
   )
 
-add_f2py_module (mcsRegrid_
+esma_add_f2py_module (mcsRegrid_
   SOURCES mcsRegrid_py.F90
   DESTINATION lib/Python/${this}
   INCLUDEDIRS ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR}/lib ${include_${this}}
