--- a/src/Components/misc/obs_aod/ABC/CMakeLists.txt
+++ b/src/Components/misc/obs_aod/ABC/CMakeLists.txt
@@ -1,6 +1,6 @@
 esma_set_this ()
 
-add_f2py_module (VLIDORT_BRDF_
+esma_add_f2py_module (VLIDORT_BRDF_
   SOURCES VLIDORT_BRDF_py.F90
   DESTINATION lib/Python/${this}
   INCLUDEDIRS ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR}/lib ${include_${this}}
