--- a/src/Components/qfed/CMakeLists.txt
+++ b/src/Components/qfed/CMakeLists.txt
@@ -7,31 +7,31 @@ esma_add_library (${this}
   DEPENDENCIES GMAO_mpeu GMAO_hermes GMAO_pyobs # crtm?
   )
 
-add_f2py_module (ut_
+esma_add_f2py_module (ut_
   SOURCES ut_py.F90
   DESTINATION lib/Python/${this}
   INCLUDEDIRS ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR}/lib ${include_${this}}
   )
 
-add_f2py_module (PlumeRise_
+esma_add_f2py_module (PlumeRise_
   SOURCES qfed/PlumeRise_py.F90
   DESTINATION lib/Python/${this}
   INCLUDEDIRS ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR}/lib ${include_${this}}
   )
 
-add_f2py_module (LockPlume_
+esma_add_f2py_module (LockPlume_
   SOURCES qfed/LockPlume_py.F90
   DESTINATION lib/Python/${this}
   INCLUDEDIRS ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR}/lib ${include_${this}}
   )
 
-add_f2py_module (tausfc_
+esma_add_f2py_module (tausfc_
   SOURCES qfed/tausfc_py.F90
   DESTINATION lib/Python/${this}
   INCLUDEDIRS ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR}/lib ${include_${this}}
   )
 
-add_f2py_module (crtmmodis_
+esma_add_f2py_module (crtmmodis_
   SOURCES qfed/crtmmodis_py.F90
   DESTINATION lib/Python/${this}
   INCLUDEDIRS ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR}/lib ${include_${this}}
