--- a/src/Components/rtms/RTSI/CMakeLists.txt
+++ b/src/Components/rtms/RTSI/CMakeLists.txt
@@ -1,1 +1,1 @@
-esma_add_subdirectories (2STREAM VLIDORT VLIDORT90 VLIDORT2OS)
+esma_add_subdirectories (2STREAM VLIDORT VLIDORT90 VLIDORT2OS LIDORT3p7)
