--- a/src/Components/CMakeLists.txt
+++ b/src/Components/CMakeLists.txt
@@ -1,9 +1,8 @@
 #add_subdirectory (cda)
-#add_subdirectory (misc)
-#add_subdirectory (missions)
+add_subdirectory (misc)
+add_subdirectory (missions)
 #add_subdirectory (qfed)
-
-esma_add_subdirectories (rtms/RTSI rtms/crtm rtms/sixsv misc/gritas)
+add_subdirectory (rtms)
 
 # Partial debugging of below:
 #add_subdirectory (misc/scat)
