Update gitignore for mepo update
Soon, `mepo` will have the ability to checkout subrepos as `repo`, `repo@`, or `@repo`. This commit updates the `.gitignore` files to support this flexibility.

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
 *~
 /cmake/
-/modules/
+/@cmake/
+/cmake@/
 /env/
+/@env/
+/env@/
 /BUILD/
 /build*/
 /install*/
 /.mepo/
 parallel_build.o*
 /src/Shared/GMAO_Shared/MAPL@/
-/cmake@/
-/env@/
+/src/Shared/GMAO_Shared/MAPL/
+/src/Shared/GMAO_Shared/@MAPL/
