PC - build orbits executables & f2py mods. install python scripts

--- a/src/Components/misc/orbits/CMakeLists.txt
+++ b/src/Components/misc/orbits/CMakeLists.txt
@@ -4,5 +4,53 @@ set (srcs glint_mod.F90  sgp4_mod.F90  TLE_mod.F90)
 
 esma_add_library (${this}
   SRCS ${srcs}
-  DEPENDENCIES Chem_Base MAPL GMAO_mpeu GMAO_ods gfio_r4
+  DEPENDENCIES Chem_Base MAPL GMAO_mpeu GMAO_ods GMAO_gfio_r4
   )
+
+ecbuild_add_executable(
+    TARGET ut_sgp4.x
+    SOURCES ut_sgp4.F90
+    LIBS ${this}
+    )
+
+esma_add_f2py_module (sgp4_
+    SOURCES sgp4_py.F90
+    DESTINATION lib/Python/${this}
+    INCLUDEDIRS ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR}/lib
+    ${include_${this}}
+    )
+
+# these are executable scripts
+set (PYSCRIPTS
+    tle_sampler.py
+    )
+
+set (SCRIPTS
+    wget_tle
+    )
+
+install (
+    PROGRAMS  ${PYSCRIPTS} ${SCRIPTS}
+    DESTINATION bin/${this}
+    )
+
+# these are non-executaables
+set (RCFILES
+    tle_sampler.rc
+    )
+
+install (
+    FILES ${RCFILES}
+    DESTINATION bin/${this}
+    )
+
+set (FILEDIRS
+    TLE
+    )
+
+install (
+    DIRECTORY ${FILEDIRS}
+    DESTINATION bin/${this}
+    USE_SOURCE_PERMISSIONS
+    MESSAGE_NEVER
+    ) 
