PC: turn on clouds dir compile. has been tested with cmake

--- a/src/Components/CMakeLists.txt
+++ b/src/Components/CMakeLists.txt
@@ -1,11 +1,9 @@
-#add_subdirectory (cda)
+add_subdirectory (cda)
 add_subdirectory (misc)
 add_subdirectory (missions)
 #add_subdirectory (qfed)
 add_subdirectory (rtms)
 
-# Partial debugging of below:
-#add_subdirectory (misc/scat)
 
 
 
