PC: there is no GEOS_Util directory here

--- a/src/Shared/GMAO_Shared/CMakeLists.txt
+++ b/src/Shared/GMAO_Shared/CMakeLists.txt
@@ -2,7 +2,7 @@ esma_check_if_debug()
 
 set (subdirectories   
   GMAO_mpeu    GMAO_etc   GEOS_Shared
-  GMAO_hermes  GEOS_Util  GMAO_ods
+  GMAO_hermes  GMAO_ods
   GMAO_psas    GMAO_pyobs Chem_Base
   GMAO_pilgrim MAPL
   )
