--- a/src/Shared/GMAO_Shared/GMAO_pyobs/CMakeLists.txt
+++ b/src/Shared/GMAO_Shared/GMAO_pyobs/CMakeLists.txt
@@ -10,18 +10,17 @@ esma_add_library (${this}
   DEPENDENCIES GMAO_gfio_r4
   INCLUDES ${INC_ESMF})
 
-include(UseF2Py)
-
+find_package(F2PY2 REQUIRED)
 # Duplicate target in ~/Components/misc/scat
 
-#esma_add_f2py_module(binObs_
+#esma_add_f2py2_module(binObs_
 #   SOURCES binObs_py.F
 #   DESTINATION lib/Python/pyobs
 #   INCLUDEDIRS ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR}/lib ${include_${this}}
 #   )
 #add_dependencies(binObs_ ${this})
 
-esma_add_f2py_module(IGBP_
+esma_add_f2py2_module(IGBP_
    SOURCES IGBP_py.F90
    DESTINATION lib/Python/pyobs
    ONLY getsimpleveg getdetailedveg
