--- a/src/Components/misc/dee/CMakeLists.txt
+++ b/src/Components/misc/dee/CMakeLists.txt
@@ -1,6 +1,7 @@
 esma_set_this()
 
-add_f2py_module (duem_
+find_package(F2PY2 REQUIRED)
+esma_add_f2py2_module (duem_
   SOURCES duem_py.F90
   DESTINATION lib/Python/${this}
   INCLUDEDIRS ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_BINARY_DIR}/lib ${include_${this}}
