PC - add mieobs to chem_base lib.  fix netcdf and mpi dependencies

--- a/src/Shared/GMAO_Shared/Chem_Base/CMakeLists.txt
+++ b/src/Shared/GMAO_Shared/Chem_Base/CMakeLists.txt
@@ -10,6 +10,7 @@ set (srcs
   Chem_MieMod.F90
   Chem_AodMod.F90
   Chem_SimpleBundleMod.F90
+  MieObs_py.F90
   )
 esma_add_library(${this} SRCS ${srcs} DEPENDENCIES GMAO_mpeu MAPL GMAO_gfio_r4)
 target_include_directories (${this} PUBLIC ${INC_ESMF} ${INC_NETCDF})
