--- a/src/Components/rtms/geo_vlidort/CMakeLists.txt
+++ b/src/Components/rtms/geo_vlidort/CMakeLists.txt
@@ -20,5 +20,6 @@ set (srcs
 
 esma_add_library (${this}
   SRCS ${srcs}
-  DEPENDENCIES MAPL.shared MAPL.base VLIDORT2OS LIDORT3p7 Chem_Base NetCDF MPI
+  DEPENDENCIES MAPL.shared MAPL.base VLIDORT2OS LIDORT3p7 Chem_Base   DEPENDENCIES MAPL.shared MAPL.base VLIDORT2OS LIDORT3p7 Chem_Base ${NETCDF_LIBRARIES} MPI::MPI_Fortran
+
   )
