PC- use install feature to put in specific directory

--- a/src/Components/missions/ACCP/CMakeLists.txt
+++ b/src/Components/missions/ACCP/CMakeLists.txt
@@ -4,7 +4,7 @@ ecbuild_add_executable (
   TARGET accp_polar_vlidort.x
   SOURCES accp_polar_vlidort.F90
   LIBS GMAO_mpeu GMAO_gfio_r4 MAPL_cfio_r4 Chem_Base MAPL VLIDORT2OS geo_vlidort ${NETCDF_LIBRARIES} MPI::MPI_Fortran
-
+  NOINSTALL
   )
 
-#DESTINATION bin/missions/${this}
+install(TARGETS accp_polar_vlidort.x DESTINATION bin/missions/${this})
