PC - updates to geo_vlidort executables to calculon repository.

--- a/src/Components/rtms/geo_vlidort/CMakeLists.txt
+++ b/src/Components/rtms/geo_vlidort/CMakeLists.txt
@@ -16,7 +16,8 @@ set (srcs
     VLIDORT_LAMBERT_BPDF.F90 
     VLIDORT_ROT.F90
     mp_netcdf_Mod.F90 
-    netcdf_Mod.F90)
+    netcdf_Mod.F90
+    cloud_MieMod.F90)
 
 
 esma_add_library (${this}
@@ -24,3 +25,76 @@ esma_add_library (${this}
   DEPENDENCIES MAPL.shared MAPL.base VLIDORT2OS LIDORT3p7 Chem_Base   DEPENDENCIES MAPL.shared MAPL.base VLIDORT2OS LIDORT3p7 Chem_Base ${NETCDF_LIBRARIES} MPI::MPI_Fortran
 
   )
+
+ecbuild_add_executable (
+  TARGET geo_vlidort.x
+  SOURCES geo_vlidort.F90
+  LIBS GMAO_mpeu GMAO_gfio_r4 MAPL_cfio_r4 Chem_Base MAPL VLIDORT2OS geo_vlidort ${NETCDF_LIBRARIES} MPI::MPI_Fortran
+  )
+
+ecbuild_add_executable (
+  TARGET geo_vlidort_cloud.x
+  SOURCES geo_vlidort_cloud.F90
+  LIBS GMAO_mpeu GMAO_gfio_r4 MAPL_cfio_r4 Chem_Base MAPL VLIDORT2OS geo_vlidort ${NETCDF_LIBRARIES} MPI::MPI_Fortran
+  )
+
+# this needs de-bugging/updates to new driver interfaces
+#ecbuild_add_executable (
+#  TARGET geo_vlidort_vnncLUT.x
+#  SOURCES geo_vlidort_vnncLUT.F90
+#  LIBS GMAO_mpeu GMAO_gfio_r4 MAPL_cfio_r4 Chem_Base MAPL VLIDORT2OS geo_vlidort ${NETCDF_LIBRARIES} MPI::MPI_Fortran
+#  )
+
+ecbuild_add_executable (
+  TARGET geo_lidort.x
+  SOURCES geo_lidort.F90 netcdf_helper.F90
+  LIBS GMAO_mpeu GMAO_gfio_r4 MAPL_cfio_r4 Chem_Base MAPL LIDORT3p7 geo_vlidort ${NETCDF_LIBRARIES} MPI::MPI_Fortran
+  )
+
+# this needs de-bugging/updates to new driver interfaces
+#ecbuild_add_executable (
+#  TARGET geo_vlidort_multinode.x
+#  SOURCES geo_vlidort_multinode.F90 netcdf_helper.F90
+#  LIBS GMAO_mpeu GMAO_gfio_r4 MAPL_cfio_r4 Chem_Base MAPL VLIDORT2OS geo_vlidort ${NETCDF_LIBRARIES} MPI::MPI_Fortran
+#  )
+
+ecbuild_add_executable (
+  TARGET geo_vlidort_surface.x
+  SOURCES geo_vlidort_surface.F90 netcdf_helper.F90
+  LIBS GMAO_mpeu GMAO_gfio_r4 MAPL_cfio_r4 Chem_Base MAPL VLIDORT2OS geo_vlidort ${NETCDF_LIBRARIES} MPI::MPI_Fortran
+  )
+
+ecbuild_add_executable (
+  TARGET geo_surface.x
+  SOURCES geo_surface.F90 netcdf_helper.F90
+  LIBS GMAO_mpeu GMAO_gfio_r4 MAPL_cfio_r4 Chem_Base MAPL geo_vlidort ${NETCDF_LIBRARIES} MPI::MPI_Fortran
+  )
+
+ecbuild_add_executable (
+  TARGET geo_angles.x
+  SOURCES geo_angles.F90
+  LIBS GMAO_mpeu GMAO_gfio_r4 MAPL_cfio_r4 Chem_Base MAPL geo_vlidort ${NETCDF_LIBRARIES} MPI::MPI_Fortran
+  )
+
+# these are executable scripts
+set (PYSCRIPTS
+    geo_vlidort_AI_lc2.py
+    geo_vlidort_blksurf_lc2.py
+    geo_vlidort_cloud_lc2.py
+    geo_vlidort_lc2.py
+    geo_vlidort_ocean_lc2.py
+    geo_warp.py
+    run_geo_vlidort_AI_lc2.py
+    run_geo_vlidort_blksurf_lc2.py
+    run_geo_vlidort_cloud_lc2.py
+    run_geo_vlidort_lc2.py
+    run_geo_vlidort_ocean_lc2.py
+    utAngles.py
+    )
+
+install (
+    PROGRAMS  ${PYSCRIPTS}
+    DESTINATION bin/${this}
+    )
+
+
